<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Home"
        android:icon="@drawable/ic_home"
        android:id="@+id/ic_home">
    </item>
    <item
        android:icon="@drawable/ic_avorite"
        android:title="Favorite"
        android:id="@+id/ic_fav"
        ></item>
<item
    android:title="Account"
    android:icon="@drawable/ic_account"
    android:id="@+id/ic_account"
    />
</menu>