...
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_person" />
    </androidx.cardview.widget.CardView>

...
