<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE5CC"
    tools:context=".ui.Fragments.FavorateFragment">
    <AutoCompleteTextView
        android:id="@+id/favSearch"
        android:layout_marginTop="5dp"
        android:background="@drawable/textshape"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_search"
        android:drawableTint="@color/black"
        android:hint="Search Your Favorite Interior"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:id="@+id/favRecycle"
        android:layout_width="match_parent"
        android:layout_below="@+id/favSearch"
        android:layout_height="match_parent"/>

</RelativeLayout>