<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFE5CC"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="50dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginTop="20dp"
        android:background="@drawable/textshape"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:layout_marginTop="20dp"
        android:background="@drawable/textshape"
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/email"
        android:background="@drawable/textshape"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:layout_marginTop="20dp"
        android:background="@drawable/textshape"

        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/con_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/textshape"

        android:inputType="textPersonName"
        android:hint="Con-Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_password" />
</androidx.constraintlayout.widget.ConstraintLayout>